# UFC_Combat_Intelligence

./: .gitignore  README.md  RELEASING.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: build-installer.ps1  configure-github-secrets.ps1  set-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_seed_starter_dataset.sql  0003_online_sync.sql  0004_fighter_images.sql  0005_fight_history.sql  0006_live_event_results.sql  0007_fighter_videos.sql
src-tauri/src/: lib.rs  main.rs  sync.rs  videos.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/analytics/: page.tsx
src/app/fighters/: page.tsx
src/app/h2h/: page.tsx
src/app/lab/: page.tsx
src/app/settings/: page.tsx
src/components/brand/: octagon-mark.tsx
src/components/features/: command-center.tsx  fighter-video-library.tsx
src/components/layout/: app-shell.tsx  global-search.tsx  sidebar.tsx  sync-control.tsx  update-control.tsx  window-titlebar.tsx
src/components/providers/: data-provider.tsx
src/components/shared/: data-state.tsx  fighter-avatar.tsx  module-placeholder.tsx
src/components/ui/: button.tsx
src/hooks/: use-app-preferences.ts
src/lib/: database.ts  fighter-analysis.ts  preferences.ts
