[package]
name = "ufc-panel"
version = "0.2.0"
description = "Local-first UFC analytics desktop application"
authors = ["UFC Panel Team"]
edition = "2021"

[lib]
name = "ufc_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
html-escape = "0.2"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["brotli", "gzip", "rustls"] }
scraper = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["fs"] }
